src/css/post.css
.post {
  margin-top: calc(-1 * var(--spacing-medium));
  display: flex;
}
.post-content {
  flex: 1;
}
.post-content p {
  text-align: left;
  text-wrap: pretty;
}
.post-nav {
  position: sticky;
  top: 2rem;
  align-self: start;
  width: 33%;
  max-width: 256px;
  display: flex;
  margin-right: var(--spacing-xlarge);
  margin-top: var(--spacing-xlarge);
  font-size: var(--font-size-body);
}
.post-nav ol {
  list-style-type: none;
  padding-inline-start: 0;
}
.post-nav li {
  margin-top: 0;
  margin-bottom: var(--spacing-medium);
}
.post-nav a {
  text-decoration: none;
  color: var(--text);
  font-size: 0.7rem;
  font-weight: var(--regular);
  display: flex;
  align-items: center;
  transition: all 50ms ease-in-out;
  text-wrap: balance;
  line-height: 1rem;
}
.post-nav a.active {
  color: var(--primary);
}
.post-nav ol, .post-nav ul {
  list-style-type: none;
}

/* ---------- HERO ---------- */

.tags {
  margin: var(--spacing-large) 0px;
  justify-content: center;
}

/* ---------- PSEUDO-HR ---------- */

.post-icon {
  height: 80px;
  width: 80px;
  margin: var(--spacing-xlarge);
}

/* ---------- IMAGES ---------- */

main img:not(.no-shadow) {
  max-width: 100%;
  height: auto;
  border-radius: var(--roundness);
  align-self: center;
  margin-top: var(--spacing-small);
  box-shadow: var(--shadow);
}

main p:has(> img) {
  text-align: center;
}

/* ---------- CALLOUTS ---------- */

.callout {
  margin: var(--spacing-large) 0;
  padding: 0 var(--spacing-large);
  border-left: var(--border);
  border-color: var(--accent-red);
}

.callout > p {
  margin: 0;
}

.callout-title {
  color: var(--accent-red);
  font-weight: var(--bold);
  padding-bottom: var(--spacing-medium);
}

/* ---------- HEADINGS ---------- */

h4 {
  text-transform: uppercase;
}

.header-anchor {
  text-decoration: none;
}

.header-anchor:hover::before {
  content: "#  ";
  opacity: 50%;
  text-decoration: none;
  display: inline-block;
  white-space: pre;
}

/* ---------- LISTS + NESTING ---------- */

.post-content ul,
.post-content ol {
  margin-block: var(--spacing-medium);
  margin-inline-start: var(--spacing-small);
}

.post-content li ul,
.post-content li ol {
  margin-block: var(--spacing-medium);
  margin-inline-start: calc(var(--spacing-small) * -1);
}

.post-content li {
  padding-left: var(--spacing-medium);
}


.post-nav li ul,
.post-nav li ol {
  margin-block: var(--spacing-medium);
  margin-inline-start: 0;
  padding-inline-start: var(--spacing-medium);
}

/* ---------- BULLET POINTS ---------- */

.post-content li::marker {
  font-weight: var(--bold);
  font-size: var(--font-size-body);
  color: var(--primary);
  padding-right: var(--spacing-large);
}

.post-content ul li::marker {
  content: "●";
}

.post-content ul li li::marker {
  content: "○";
}

.post-content ul li li li::marker {
  content: "●";
}

/* ---------- RESPONSIVE OVERRIDES ---------- */

@media (max-width: 600px) {

.post-content {
  width: initial;
}
.post-nav {
  display: none;
}

  ul,
  ol {
    margin-inline-start: calc(var(--spacing-medium) * -1);
  }

  li ul,
  li ol {
    margin-block: var(--spacing-medium);
    margin-inline-start: calc(var(--spacing-large) * -1);
  }
}

/* ---------- IFRAME ELEMENTS ---------- */

.podcast-player {
  margin-bottom: var(--spacing-xlarge);
  border: var(--border);
  border-radius: var(--roundness);
  padding: var(--spacing-medium);
  width: calc(100% - (var(--spacing-medium) * 2) - 8);
  height: 200px;
  overflow: hidden;
}

.podcast-player > iframe {
  width: 100%;
  height: 200px;
  border-radius: 12px;
}

.video-player {
  margin-bottom: var(--spacing-xlarge);
  border: var(--border);
  border-radius: var(--roundness);
  padding: var(--spacing-medium);
  overflow: hidden;
  width: calc(100% - (var(--spacing-medium) * 2) - 8);
  height: auto;
  aspect-ratio: 500 / 315;
}

.video-player > iframe {
  width: 100%;
  height: 100%;
  border-radius: 12px;
}

